# Game-Automation-Suite

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  README_ja.md  README_zh.md  app.py  bug_fixes.md  gui.py  jest.config.js  main.py  move_files.py  organize_files.py  pyproject.toml  pytest.ini  qt_gui.py  qt_gui_demo.py  requirements-ai.txt  requirements-core.txt  requirements-dev.txt  requirements-nlp.txt  requirements.txt  requirements_analysis.txt  requirements_optimized.txt  setup.cfg  setup.py  start.bat  start_game_automation.bat  start_qt.bat  vite.config.js
config/: config.yaml  deploy.template.yaml  game_settings.yaml  resource_paths.yaml
docs/: api.md  conf.py  core_refactoring_progress.md  current_tasks.md  dependency_optimization.md  index.rst  installation.rst  progress.md  project_planning.md  refactoring_plan.md  refactoring_progress.md
docs/design/: resource_manager.md
frontend/src/: App.vue  i18n.js  main.js
game_automation/: core_test.py  device_manager.py  game_engine.py  image_recognition.py  main.py  start_game_engine.py  structure_plan.txt
game_automation/actions/: attack_enemy_action.py  base_action.py  complete_task_action.py  explore_area_action.py  gather_resource_action.py  use_item_action.py
game_automation/ai/: a3c.py  advanced_decision_maker.py  ai_decision_maker.py  ai_decision_maker_refactored.py  experience_replay.py  meta_learning.py  reinforcement_learning.py  reinforcement_learning_refactored.py  unified_decision_maker.py
game_automation/analysis/: game_analyzer.py
game_automation/blessing/: advanced_blessing_manager.py  blessing_manager.py
game_automation/config/: config_manager.py
game_automation/controllers/: advanced_battle_strategy.py  auto_battle_strategy.py  battle_preparation.py  task_explorer.py  task_manager.py  task_manager_module.py  task_utils.py  touch_controller.py
game_automation/core/: base_manager.py  behavior_tree.py  config_manager.py  context_manager.py  decision_maker.py  engine.py  rule_system.py  scene_analyzer.py  state_machine.py  task_action_handler.py  task_executor.py  task_history.py  task_manager.py  task_rule.py  task_types.py
game_automation/debug/: visual_debugger.py
game_automation/device/: device_action_handler.py  device_manager.py  emulator_manager.py  (+1 more)
game_automation_suite/: config.py  core.py  main.py  utils.py
game_control/: game_engine.py  image_recognition.py
main/: full_feature_launcher.py  scheduled_task_launcher.py
monitoring/: dashboard.py
ocr_prediction/: README.md  check_image.py  ocr_utils.py  onnx_ocr.py  requirements.txt  test_ocr.py
src/: App.vue  i18n.js  main.js
tests/: __init__.py  automated_test_suite.py  conftest.py  test_advanced_battle_strategy.py  test_advanced_scene_analyzer.py  test_ai_decision_maker.py  test_auto_battle_strategy.py  test_blessing_manager.py  test_config_manager.py  test_core.py  test_decision_maker.py  test_device_action_handler.py  test_device_manager.py  test_game_engine.py  test_game_scenarios.py  test_game_strategy_action_handler.py  test_i18n.py  test_i18n_manager.py  test_image_recognition.py  test_image_recognition_extended.py  test_integration.py  test_modules.py  test_ocr_utils.py  test_performance_monitor.py  test_performance_suite.py  test_rogue_manager.py  test_scene_action_handler.py  test_scene_analyzer.py  test_scene_analyzer_extended.py  test_task_action_handler.py  test_task_executor.py  test_task_manager.py
utils/: __init__.py  cli.py  config_manager.py  data_handler.py  database_check.py  database_manager.py  database_optimizer.py  error_handler.py  i18n.py  i18n_manager.py  input_validator.py  logger.py  performance_manager.py  performance_monitor.py  performance_optimizer.py  plugin_manager.py  security.py  session_utils.py
(+182 files in other folders)
