[flake8]
max-line-length = 100
exclude = .git,__pycache__,build,dist,*.egg-info
ignore = E203, W503
per-file-ignores =
    __init__.py:F401,F403
    tests/*:S101,S105,S106

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = False
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_unreachable = True
strict_optional = True
ignore_missing_imports = True

[mypy-tests.*]
disallow_untyped_defs = False
check_untyped_defs = False

[tool:pytest]
minversion = 7.0
addopts = -ra -q --cov=game_automation --cov-report=term-missing
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
markers =
    slow: marks tests as slow (deselect with '-m "not slow"')
    integration: marks tests as integration tests
    unit: marks tests as unit tests

[coverage:run]
branch = True
source = game_automation
omit =
    tests/*
    setup.py
    conftest.py
    */__init__.py

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    if self.debug:
    raise NotImplementedError
    if __name__ == .__main__.:
    pass
    raise ImportError
    except ImportError:
ignore_errors = True
fail_under = 80

[coverage:html]
directory = htmlcov

[isort]
profile = black
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 100
skip = .git,__pycache__,build,dist,*.egg-info

[pylint]
max-line-length = 100
disable = C0111,R0903,C0103
ignore = migrations
ignore-patterns = test_.*?py
good-names = i,j,k,ex,Run,_,fp,id
output-format = colorized

[bandit]
exclude = tests,setup.py,conftest.py
tests = B101,B102,B103,B104,B105,B106,B107,B108,B110,B112,B201,B301,B302,B303,B304,B305,B306,B307,B308,B309,B310,B311,B312,B313,B314,B315,B316,B317,B318,B319,B320,B321,B322,B323,B324,B325

[aliases]
test = pytest

[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE
